image and alignment fix

--- a/midtermstyles.css
+++ b/midtermstyles.css
@@ -5,13 +5,10 @@ h1#site-title{
     margin-top:40px;
     margin-bottom:40px;
 } 
-.container-main{
+.container{
     width:96%;
     max-width: 1020px;
     margin: 0 auto;
-}
-.container{
-    max-width: 800px;
 }
 body{
     font-family:'Times New Roman', Times, serif;
